Revision de ortografia
Se corrigieron errores respecto a la primera version de la pagina como: Ortografia, meta para acentos, imagenes, creditos para el diseño de la pagina.

--- a/creditos.html
+++ b/creditos.html
@@ -156,138 +156,35 @@
 </nav>
 <!--TERMINA EL MENU DE NAVEGACIÓN-->
 
-<!-- AQUI COMIENZAN LOS PERFILES DE UN INGENIERO CIVIL-->
+
+<!--AQUI COMIENZAN LOS CREDITOS DE DISEÑO DE LA PAGINA -->
 <div class="container">
 <div class="row">
-<div class="col-lg-12 main borde_derecha">
-<!-- AQUI SE ASIGNA EL TITULO A LA INFORMACION-->	
-<h2> Perfil de un Ingeniero Civil </h2>
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+<div class="col-lg-12 main borde_derecha">  
+<h2 class="text-center"> Créditos de diseño </h2>
 
-<div class="panel panel-default">
-<div class="panel-heading" role="tab" id="headingOne">
-<h4 class="panel-title">
-<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-<!-- TITULO DESPLEGABLE DE PERFIL DE INGRESO--> 
-Perfil de Ingreso
-</a>
-</h4>
-</div>
-<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-<div class="panel-body">
-<!-- INFORMACION DEL PERFIL DE INGRESO--> 
- <p class="text-justify">El alumno interesado en cursar la licenciatura de ingeniería civil, deberá haber concluido el bachillerato en el Área de las Ciencias Físico Matemáticas, tener una fuerte formación en Física y Matemáticas, y conocimientos básicos de Química.</p>
+<div align="center">
+<img src="imagenes/fes4.png" class="img-responsive">
 
-<p class="text-justify">Se requerirá además, que tenga facilidad para la planeación y dirección de trabajos en grupo, interés, científico, técnico y administrativo, capacidad de análisis y síntesis, inclinación para la solución de problemas y capacidad para la toma de decisiones, apoyado en su conocimiento.</p>
+<table>
+<tr>
+<th class="text-center" > <h3> Pachuca Alvarez José Carlos </h3></th>
+</tr>
 
-<p class="text-justify">Para valorar los conocimientos y habilidades de los alumnos de primer ingreso, se lleva a cabo un examen diagnóstico institucional, el cual permite conocer las deficiencias de su formación previa.</p>
-
-<p class="text-justify">Con el resultado de los exámenes, se programan actividades extracurriculares que permitan minimizar esas deficiencias y mejorar el tránsito de los alumnos por la licenciatura. Entre esas actividades podemos mencionar: cursos de física y matemáticas  para grupos de primer ingreso, y programa de asesorías para asignaturas de alto índice de reprobación.</p>
+<tr>
+<td class="text-center"> <h4> ingenieropachuca@gmail.com </h4></td>
+</tr>
+</table>
 
 </div>
-</div>
-</div>
-<!-- AQUI COMIENZAN EL PERFIL DE EGRESO-->
-<div class="panel panel-default">
-<div class="panel-heading" role="tab" id="headingTwo">
-<h4 class="panel-title">
-<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-Perfil de Egreso
-</a>
-</h4>
-</div>
-<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-<div class="panel-body">
+ 
 
-<p class="text-justify">El Egresado de la Licenciatura de Ingeniería Civil tiene la capacidad para planear, diseñar, construir, administrar, mantener y operar obras para el desarrollo urbano, rural, industrial, habitacional y de la infraestructura del país, procurando el mejor aprovechamiento de los recursos materiales y financieros en beneficio de la sociedad.</p> 
-<p class="text-justify">Debe poseer conocimientos de física, matemáticas y química que le permitan lograr la compresión de las ciencias de la ingeniería civil; entender los fundamentos de estructuras, geotecnia, hidráulica, construcción, ambiental y sistemas y transportes que le permitan proponer soluciones a los problemas propios de la profesión; aplicar las herramientas de la computación y de la comunicación gráfica en los proyectos de ingeniería civil; tener conocimientos generales de administración y evaluación de proyectos y conocer la sociedad en la que desarrollará sus actividades.</p>
-<p>El egresado de la FES Aragón poseerá los siguientes conocimientos, habilidades aptitudes y actitudes:</p>
-
-<h4>Conocimientos</h4>
-<p>El alumno egresado deberá:</p>
-<ul>
-<li class="text-justify">Poseer conocimientos de la física y las matemáticas, destacando lo relativo a las leyes del equilibrio y el movimiento, estructura de la materia, comportamiento de los fluidos, transformación de la energía y fenómenos físicos en general y algunos de carácter empírico que, de manera conjunta, le permitan entender y prever el comportamiento mecánico de los materiales y obras de construcción de todo tipo.</li>
-<li class="text-justify">Contar con una formación metodológica apoyada en el método científico y en la teoría general de proyectos.</li>
-<li class="text-justify">Tener conocimientos básicos en todos los campos de la Ingeniería Civil: estructuras, construcción, geotecnia, hidráulica, ambiental y sistemas de transporte, para la solución integral de problemas reales.</li>
-
-<li class="text-justify">Aplicar eficazmente la computación y la informática.</li>
-<li class="text-justify">Tener conocimientos sobre los recursos y las necesidades de la comunidad donde va desarrollar su ejercicio profesional.</li>
-</ul>
-
-<h4>Habilidades y aptitudes</h4>
-<p>El alumno egresado deberá: </p>
-<ul>
-<li class="text-justify">Aplicar, para el análisis de problemas, la inventiva, habilidad e ingenio.</li>
-<li class="text-justify">Saber organizar, presupuestar, ejecutar u supervisar la construcción de diversos sistemas de obras.</li> 
-<li class="text-justify">Tener capacidad de toma de decisiones.</li> 
-<li class="text-justify">Poder adaptarse a sesiones de trabajo prolongadas, a veces bajo condiciones y ambientes físicos adversos.</li> 
-<li class="text-justify"> Ser capaz de observar los fenómenos físicos para lograr su interpretación.</li> 
-<li class="text-justify"> Tener capacidad de crear tecnología propia mediante la investigación.</li> 
-<li class="text-justify"> Estar preparado para participar en procesos de transferencia y asimilación de tecnología.</li> 
-<li class="text-justify"> Proponer soluciones originales  a los problemas que se planteen.</li> 
-<li class="text-justify"> Ser hábil en la planeación y evaluación de proyectos, para conocer su rentabilidad y su impacto social, así como conocer las consecuencias ecológicas adversas.</li> 
-<li class="text-justify"> Poder expresarse eficientemente, en forma oral, escrita y gráfica.</li> 
-<li class="text-justify"> Tener facilidad para organizar y dirigir grupos de trabajo.</li> 
-<li class="text-justify"> Aplicar algunos de los aspectos de comunicación humana en las organizaciones.</li> 
-<li class="text-justify"> Tener habilidad para supervisar el trabajo técnico y administrativo de otras personas.</li> 
-<li class="text-justify"> Coordinar en diversos proyectos de obras, el trabajo de grupos interdisciplinarios y de especialistas en diversas ramas de la Ingeniería Civil.</li> 
-</ul>
-
-
-<h4>Actitudes</h4> 
-<p>El alumno egresado deberá: </p>
-<ul>
-<li class="text-justify">Tener iniciativa.</li>
-<li class="text-justify">Tener capacidad para tratar con personas de diversa preparación, criterio y caracteres, en el desarrollo de su trabajo profesional.</li>
-<li class="text-justify">Tener voluntad de mantenerse actualizado sobre las mejores técnicas, procedimientos y últimos avances tecnológicos para desarrollar la práctica profesional.</li>
-<li class="text-justify">Procurar, en las tareas que le corresponden, tener presente la importancia de mejorar los niveles de vida de los mexicanos con la creación de sistemas de obras para la producción de bienes y servicios.</li>
-<li class="text-justify">Tener una posición de objetividad en su labor profesional, fuera de prejuicios y de presiones por interés particulares.</li>
-<li class="text-justify">Estar dispuesto en formar y capacitar al personal a su cargo.</li>
-<li class="text-justify">Tener respeto e interés por la cultura.</li>
-<li class="text-justify">Desarrollar su actividad profesional con un sentido de servicio social y con apego a la ética.
-Manifestar el compromiso al trabajo con disciplina y orden.</li>
-</ul>
-
-
-</div>
-</div>
-</div>
-
-<div class="panel panel-default">
-<div class="panel-heading" role="tab" id="headingTwo">
-<h4 class="panel-title">
-<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-Perfil de Profesional
-</a>
-</h4>
-</div>
-<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-<div class="panel-body">
-
-<p class="text-justify">El ingeniero civil realiza obras de servicio colectivo, participando en las etapas de desarrollo, planeación, operación, construcción y mantenimiento de obras de infraestructura, tales como hidráulica, sanitarias, comunicaciones y de servicio en general, atendiendo con sus conocimientos las necesidades de la sociedad, de investigación y docencia que el país requiere.</p>
-
-<p class="text-justify">La disciplina cuenta con varias opciones de trabajo, ya sea en instituciones públicas o privadas, en el ejercicio libre de la profesión y en la docencia y la investigación.</p>
-
-<p class="text-justify">En el sector público: SEDESOL, Agricultura, SCT, Reforma Agraria, Turismo, CFE, CNA, INFONAVIT, etc. </p> 
-
-<p class="text-justify">En el sector privado:empresas constructoras, de consultoría y de profesionistas asociados.</p>
-
-<p class="text-justify">En la docencia en instituciones de educación superior públicas y privada.</p>
-
-
-</div>
-</div>
-</div>
- <!-- AQUI AGREGAR OTRA BARRA DESPLEGABLE-->
-
-</div>
 <br>
 </div>
-</div>	
+</div>
 </div>
 <br>
-<!-- AQUI TERMINAN LOS PERFILES DE UN INGENIERO CIVIL-->
-
+<!--AQUI TERMINAN LOS CREDITOS DE DISEÑO DE LA PAGINA -->
 
 <!--AQUI EMPIEZA EL DIRECTOIO DE LA FES-->
 <footer>
