--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 ﻿<!--PAGINA FUE REALIZADA Y DISEÑADA POR PACHUCA ALVAREZ JOSE CARLOS ingenieropachuca@gmail.com-->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <!--ARCHIVOS CSS PARA EL DISEÑO DE LA PAGINA-->
 <link rel="stylesheet" href="css/bootstrap.css"/>
 <link rel="stylesheet" href="css/estilos.css"/>
 <!--TITULO DE LA PAGINA-->
-<title>Ingenieria Civil</title>
+<title>Ingeniería Civil</title>
+<link rel="shortcut icon" href="logos/unnamed.ico">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-103559095-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
 </head>
 <!--AQUI COMIENZA EL CUERPO DE LA PAGINA-->
 <body>
@@ -71,7 +84,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="https://www.dgae.unam.mx/normatividad/interpretacion.html" target="_blank">Normatividad</a></li>
             <li><a href="http://aragon.dgae.unam.mx/almn/index.php" target="_blank">Servicios Escolares</a></li>
-            <li><a href="http://www.aragon.unam.mx/evaluacion1.1/Login.php" target="_blank">Evaluacion de profesores</a></li>
+            <li><a href="http://www.aragon.unam.mx/evaluacion1.1/Login.php" target="_blank">Evaluación de profesores</a></li>
             <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd91YvurLC0N63f9fZhwpKxwlu78POTkQjRWCm07prCIDHA1Q/viewform" target="_blank">Cuestionario sobre servicios institucionales</a></li>
           </ul>
         </li>
@@ -87,7 +100,7 @@
 			<li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
 			<li><a href="atributos.html">Atributos de egreso</a></li>
 			<li role="separator" class="divider"></li>
-			<li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
+			<li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorio</a></li>
           </ul>
         </li>
         </ul>
@@ -99,7 +112,7 @@
           <ul class="dropdown-menu">
 			<li> <a href="titulacion.html">Titulación </a> </li>
 			<li role="separator" class="divider"></li>
-			<li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educacion continua</a></li>
+			<li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educación continua</a></li>
 			<li><a href="http://www.aragon.unam.mx/aragon/eventos/2017/pdmi_unam/" target="_blank">Oferta Educativa</a></li>
 			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7xjTvk_9mWU5uo_cunAlbIIOtESCtnxjxqs3NGf97La9cCQ/viewform?fbzx=2033124194252804600" target="_blank">Cuestionario a Egresados</a></li>
           </ul>
@@ -122,19 +135,19 @@
 <ul class="nav navbar-nav navbar-right col-lg-3 col-md-3 hidden-sm col-xs-12 ">
 <!--ICONO DE FACEBOOK-->
 <div class="col-lg-3 col-md-3  col-xs-3 ">
-<a href="https://www.facebook.com/" target="_blank"><img src="logos/face2.png" class="img-responsive"></a>
+<a href="https://www.facebook.com/ici.fesaragon/" target="_blank"><img src="logos/face2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE GOOGLE-->
 <div class="col-lg-3 col-md-3  col-xs-3">
-<a href="https://plus.google.com/" target="_blank"><img src="logos/goo2.png" class="img-responsive"></a>
+<a href="https://plus.google.com/u/0/117581874530161550901" target="_blank"><img src="logos/goo2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE INSTAGRAM-->
 <div class="col-lg-3 col-md-3  col-xs-3">
-<a href="https://www.instagram.com/" target="_blank"><img src="logos/insta2.png" class="img-responsive"></a>
+<a href="https://www.instagram.com/ici.fesaragon/" target="_blank"><img src="logos/insta2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE TWITTER-->
 <div class="col-lg-3 col-md-3 col-xs-3">
-<a href="https://twitter.com/" target="_blank"><img src="logos/tui2.png" class="img-responsive"></a>
+<a href="https://twitter.com/ici_fesaragon?lang=es" target="_blank"><img src="logos/tui2.png" class="img-responsive"></a>
 </div>
 </ul>
 
@@ -264,7 +277,7 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <a href="http://www.aragon.unam.mx/aragon/proceso-de-titulacion.html" target="_blank"><img src="imagenes/titulacion.png" alt="">
 <div class="caption ">
 <div class="visible-xs visible-sm visible-md">
-<span class="label label-success bar"> Titulacion </span>
+<span class="label label-success bar"> Titulación </span>
 </a>
 </div>
 </div>
@@ -311,9 +324,9 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class="media-body">
 <h4 class="media-heading"></h4>
 <!--TITULO DE SITIOS DE INTERES EN ESCRITORIO-->
-<h2 class="hidden-xs">Sitios de interes</h2>
+<h2 class="hidden-xs">Sitios de interés</h2>
 <!--TITULO DE SITIOS DE INTERES EN MOVILES-->
-<h3 class="visible-xs">Sitios de interes</h3>
+<h3 class="visible-xs">Sitios de interés</h3>
 </div>
 </div>
 </div>
@@ -332,7 +345,7 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <!--IMAGEN DE BIBLIOTECA EN LINEA AQUI-->
 <br>
 <a href="http://bibliotecas.unam.mx/index.php/catalogos" target="_blank"><img src="imagenes/biblioteca.png" class="img-responsive"></a>
-<span class="label label-info bar visible-xs"> Biblioteca en linea</span>
+<span class="label label-info bar visible-xs"> Biblioteca en línea</span>
 <br>
 <br>
 </div>
@@ -412,9 +425,9 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <h6 class="visible-xs text-justify"></h6>
 <!--BOTON DE LEER MAS (ESCRITORIO)-->
 <p class="lead">
-<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer mas</a>
+<a class="btn btn-primary btn-lg hidden-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer más</a>
 <!--BOTON DE LEER MAS (MOVILES)-->
-<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer mas</a> </h6>
+<h6> <a class="btn btn-primary btn-lg visible-xs" href="http://www.aragon.unam.mx/bienvenidaFESAragon20181/" target="_blank">Leer más</a> </h6>
 </p>
 </div>
 </div>
@@ -434,15 +447,15 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class="media-body">
 <h4 class="media-heading"></h4>
 <!--TITULO DE CAPITULOS ESTUDIANTILES PARA (ESCRITORIO)-->
-<h2 class="hidden-xs">Capitulos Estudiantiles</h2>
+<h2 class="hidden-xs">Capítulos Estudiantiles</h2>
 <!--TITULO DE CAPITULOS ESTUDIANTILES PARA (MOVILES)-->
-<h3 class="visible-xs">Capitulos Estudiantiles</h3>
+<h3 class="visible-xs">Capítulos Estudiantiles</h3>
 </div>
 </div>
 </div>
 </div>
 </div>
-<br>
+
 <!--PRIMERA COLUMNA DE CAPITULOS ESTUDIANTILES-->
 <div class="container main borde_derecha">
 <div class=" col-lg-12 ">
@@ -453,19 +466,19 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <th> <a href="https://www.facebook.com/aci.aragon/" target="_blank">
 <img src="imagenes/ACI.png" class="img-responsive">
 <span class="label label-success bar visible-xs">ACI</span>
-<p class="text-center hidden-xs"> Capitulo Estudiantil ante el ACI</p></a>
+<p class="text-center hidden-xs"> Capítulo Estudiantil ante el ACI</p></a>
 </th>
 <!--CAPITULO ESTUDIANTIL DOS AMH-->
 <th> <a href="https://www.facebook.com/ce.amh.aragon/?hc_ref=SEARCH" target="_blank">
 <img src="imagenes/AMH.png" class="img-responsive"> 
 <span class="label label-warning bar visible-xs">AMH</span>
-<p class="text-center hidden-xs"> Capitulo Estudiantil ante la AMH</p></a>
+<p class="text-center hidden-xs"> Capítulo Estudiantil ante la AMH</p></a>
 </th>
 <!--CAPITULO ESTUDIANTIL TRES ANEIC-->
 <th> <a href="https://www.facebook.com/pg/aneicfesaragon/photos/?ref=page_internal" target="_blank">
 <img src="imagenes/ANEIC.png" class="img-responsive"> 
 <span class="label label-info bar visible-xs">ANEIC</span>
-<p class="text-center hidden-xs">Capitulo Estudiantil ante la ANEIC</p></a>
+<p class="text-center hidden-xs">Capítulo Estudiantil ante la ANEIC</p></a>
 </th>
 <!--CAPITULO ESTUDIANTIL CUATRO SOCIEDAD-->
 <th class="hidden-xs"><a href="https://www.facebook.com/SEIEAragon/?hc_ref=SEARCH&fref=nf" target="_blank"> 
@@ -483,19 +496,19 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <th><a href="https://www.facebook.com/amaac.aragon/" target="_blank">
 <img src="imagenes/MAAC.png" class="img-responsive"> 
 <span class="label label-warning bar visible-xs">AMAAC</span>
-<p class="text-center hidden-xs"> Capitulo Estudiantil ante la AMAAC</p></a>
+<p class="text-center hidden-xs"> Capítulo Estudiantil ante la AMAAC</p></a>
 </th>
 <!--CAPITULO ESTUDIANTIL SEIS SMING-->
 <th> <a href="https://www.facebook.com/CapituloEstudiantilSMIGFesAragon/" target="_blank">
 <img src="imagenes/SMIG.png" class="img-responsive">
 <span class="label label-danger bar visible-xs">SMIG</span>
-<p class="text-center hidden-xs"> Capitulo Estudiantil ante la SMIG</p></a>
+<p class="text-center hidden-xs"> Capítulo Estudiantil ante la SMIG</p></a>
 </th>
 <!--CAPITULO ESTUDIANTIL SIETE CICM-->
 <th> <a href="https://www.facebook.com/OSEIC1123/?hc_ref=SEARCH&fref=nf" target="_blank">
 <img src="imagenes/CICM.png" class="img-responsive"> 
 <span class="label label-default bar visible-xs">CICM</span>
-<p class="text-center hidden-xs"> Capitulo Estudiantil ante el CICM -Sicma</p></a>
+<p class="text-center hidden-xs"> Capítulo Estudiantil ante el CICM -Sicma</p></a>
 </th>
 <!--COLOCAR OTRO CAPITULO ESTUDIANTIL EN LA COLUMNA DOS-->
 </tr>
@@ -521,15 +534,14 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <h4 class="media-heading"></h4>
 <button href="#" type="button" class="titulo1"  class="btn btn-default" data-toggle="modal" data-target="#holaModalLong" >
 <!--TITULO DE LOS LOGROS DE INGENIERIA CIVIL (ESCRITORIO)-->
-<h2 class="hidden-xs">Logros de Ingenieria Civil</h2>
+<h2 class="hidden-xs">Logros de Ingeniería Civil</h2>
 <!--TITULO DE LOS LOGROS DE INGENIERIA CIVIL (MOVILES)-->
-<h4 class="visible-xs">Logros de Ingenieria Civil</h4>
+<h4 class="visible-xs">Logros de Ingeniería Civil</h4>
 </button>
 </div>
 </div>
 </div>
 </div>
-<br>
 </div>
 <!--AQUI TERMINA EL TITULO DE LOS LOGROS DE INGERNIERIA CIVIL-->
 
@@ -550,9 +562,9 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class="row">
 <div class="col-lg-6 col-md-7 col-sm-9 col-xs-12">
 <!-- TITULO DE LA LISTA (ESCRITORIO)-->
-<h3 class="hidden-xs" align="justify">Logros de Ingenieria Civil </h3>
+<h3 class="hidden-xs" align="justify">Logros de Ingeniería Civil </h3>
 <!-- TITULO DE LA LISTA (MOVILES) -->
-<h4 class="visible-xs" align="justify">Logros de Ingenieria Civil </h4>
+<h4 class="visible-xs" align="justify">Logros de Ingeniería Civil </h4>
 <table class="table table-bordered table-condensed  table-responsive table-hover " align="center">
 <tr>
 <th>Titulo</th>
@@ -642,13 +654,13 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class="container">
 <div class="row">
 <!--IMAGEN UNO DE LOGROS 40 ANIVERSARIO-->
-<div class="col-sm-6 col-md-6 col-xs-6 col-lg-6 metro borde_nuevo">
+<div class="col-sm-6 col-md-6 col-xs-6 col-lg-6 metro borde_derecha">
 <br>
 <a href="http://publicaciones-aragon.unam.mx/repositorio/gaceta/360/360.pdf#page=5" target="_blank"><img src="imagenes/fesnacional.png" class="img-responsive"></a>
 <br>
 </div>
 <!--IMAGEN DOS DE LOGROS CONCURSO-->
-<div class="col-sm-6 col-md-6 col-xs-6 col-lg-6 metro borde_nuevo">
+<div class="col-sm-6 col-md-6 col-xs-6 col-lg-6 metro borde_derecha">
 <br>
 <a href="http://publicaciones-aragon.unam.mx/repositorio/gaceta/354/354.pdf#page=6" target="_blank"><img src="imagenes/concursos.png" class="img-responsive"></a>
 <br>
@@ -753,11 +765,17 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 </footer>
 <!--DERECHOS RESERVADOS DE LA PAGINA (ESCRITORIO)-->
 <div class="container-fluid titulo">
-<h5 class="text-justify hidden-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2016.
+<h5 class="text-justify hidden-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2017.
 Esta página puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su dirección electrónica. De otra forma, requiere permiso previo por escrito de la institución.</h5>
 <!--DERECHOS RESERVADOS DE LA PAGINA (MOVILES)-->
-<h6 class="text-justify visible-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2016.
+<h6 class="text-justify visible-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2017.
 Esta página puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su dirección electrónica. De otra forma, requiere permiso previo por escrito de la institución.</h6>
+
+<p align="center">
+	<a href="creditos.html"><button type="button" class="btn creditos btn-sm">Créditos de diseño</button>
+  </a>
+</p>
+
 </div>
 <!--TERMINA DIRECTORIO DE INGENIERIA CIVIL -->
 
