--- a/objetivos.html
+++ b/objetivos.html
@@ -1,13 +1,26 @@
 <!--PAGINA FUE REALIZADA Y DISEÑADA POR PACHUCA ALVAREZ JOSE CARLOS ingenieropachuca@gmail.com-->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <!--ARCHIVOS CSS PARA EL DISEÑO DE LA PAGINA-->
 <link rel="stylesheet" href="css/bootstrap.css"/>
 <link rel="stylesheet" href="css/estilos.css"/>
 <!--TITULO DE LA PAGINA-->
-<title>Ingenieria Civil</title>
+<title>Ingeniería Civil</title>
+<link rel="shortcut icon" href="logos/unnamed.ico">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-103559095-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
 </head>
 <!--AQUI COMIENZA EL CUERPO DE LA PAGINA-->
 <body>
@@ -71,7 +84,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="https://www.dgae.unam.mx/normatividad/interpretacion.html" target="_blank">Normatividad</a></li>
             <li><a href="http://aragon.dgae.unam.mx/almn/index.php" target="_blank">Servicios Escolares</a></li>
-            <li><a href="http://www.aragon.unam.mx/evaluacion1.1/Login.php" target="_blank">Evaluacion de profesores</a></li>
+            <li><a href="http://www.aragon.unam.mx/evaluacion1.1/Login.php" target="_blank">Evaluación de profesores</a></li>
             <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd91YvurLC0N63f9fZhwpKxwlu78POTkQjRWCm07prCIDHA1Q/viewform" target="_blank">Cuestionario sobre servicios institucionales</a></li>
           </ul>
         </li>
@@ -87,7 +100,7 @@
       <li><a href="plan_estudios_actual.html">Plan de Estudios</a></li>
       <li><a href="atributos.html">Atributos de egreso</a></li>
       <li role="separator" class="divider"></li>
-      <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorios</a></li>
+      <li><a href="http://laboratorio-l-4.blogspot.mx/" target="_blank">Laboratorio</a></li>
           </ul>
         </li>
         </ul>
@@ -99,7 +112,7 @@
           <ul class="dropdown-menu">
       <li> <a href="titulacion.html">Titulación </a> </li>
       <li role="separator" class="divider"></li>
-      <li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educacion continua</a></li>
+      <li><a href="http://educacioncontinua.cuaed.unam.mx/oferta.php" target="_blank">Educación continua</a></li>
       <li><a href="http://www.aragon.unam.mx/aragon/eventos/2017/pdmi_unam/" target="_blank">Oferta Educativa</a></li>
       <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf7xjTvk_9mWU5uo_cunAlbIIOtESCtnxjxqs3NGf97La9cCQ/viewform?fbzx=2033124194252804600" target="_blank">Cuestionario a Egresados</a></li>
           </ul>
@@ -122,19 +135,19 @@
 <ul class="nav navbar-nav navbar-right col-lg-3 col-md-3 hidden-sm col-xs-12 ">
 <!--ICONO DE FACEBOOK-->
 <div class="col-lg-3 col-md-3  col-xs-3 ">
-<a href="https://www.facebook.com/" target="_blank"><img src="logos/face2.png" class="img-responsive"></a>
+<a href="https://www.facebook.com/ici.fesaragon/" target="_blank"><img src="logos/face2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE GOOGLE-->
 <div class="col-lg-3 col-md-3  col-xs-3">
-<a href="https://plus.google.com/" target="_blank"><img src="logos/goo2.png" class="img-responsive"></a>
+<a href="https://plus.google.com/u/0/117581874530161550901" target="_blank"><img src="logos/goo2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE INSTAGRAM-->
 <div class="col-lg-3 col-md-3  col-xs-3">
-<a href="https://www.instagram.com/" target="_blank"><img src="logos/insta2.png" class="img-responsive"></a>
+<a href="https://www.instagram.com/ici.fesaragon/" target="_blank"><img src="logos/insta2.png" class="img-responsive"></a>
 </div>
 <!--ICONO DE TWITTER-->
 <div class="col-lg-3 col-md-3 col-xs-3">
-<a href="https://twitter.com/" target="_blank"><img src="logos/tui2.png" class="img-responsive"></a>
+<a href="https://twitter.com/ici_fesaragon?lang=es" target="_blank"><img src="logos/tui2.png" class="img-responsive"></a>
 </div>
 </ul>
 
@@ -143,29 +156,31 @@
 </nav>
 <!--TERMINA EL MENU DE NAVEGACIÓN-->
 
-<br>
+<!--AQUI EMPIEZA EL OBJETIVO GENERAL-->
 <div class="container">
-<div class="main row">
-<div class="col-lg-12 ">
+<div class="row">
+<div class="col-lg-12 main borde_derecha">
 
 <table>
 	<tr> 
-	<th><h1>Objetivo General</h1></th>
+	<th><h2>Objetivo General</h2></th>
 	</tr>
 	<tr> 
 	<td><p class="text-justify">Formar profesionales con fundamentos para planear, diseñar, construir, operar, desarrollar y evaluar proyectos de infraestructura de obra pública y privada, en las áreas de estructuras, construcción, geotecnia, sistemas y transportes, hidráulica y ambiental; con la finalidad de dar solución a las necesidades de creación, mejora, mantenimiento y rehabilitación de obras civiles desde un marco de diversidad de la Ingeniería, aplicando criterios de sustentabilidad con enfoque ético y responsable en el ejercicio de la profesión.</p></td>
 	</tr>
 </table>
+<!--AQUI TERMINA EL OBJETIVO GENERAL-->
 
+
+<!--AQUI EMPIEZAN LOS OBJETIVOS DEL PROGRAMA EDUCATIVO-->
 <table>
 	<tr> 
-	<th><h1 class="hidden-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h1>
+	<th><h2 class="hidden-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h2>
 <h3 class="visible-xs">Objetivos del Programa Educativo de Ingeniería Civil de la FES Aragón</h3>
 
 	</th>
 	</tr>
 </table>
-
 
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
@@ -242,13 +257,15 @@
       </div>
     </div>
   </div>
+<!--AQUI AGREGAR MAS OBJETIVOS AQUI-->
 </div>
-
 
 </div>
 </div>
 </div>
 <br>
+<!--AQUI TERMINAN LOS OBJETIVOS DEL PROGRAMA EDUCATIVO-->
+
 
 <!--AQUI EMPIEZA EL DIRECTOIO DE LA FES-->
 <footer>
@@ -321,11 +338,17 @@
 </footer>
 <!--DERECHOS RESERVADOS DE LA PAGINA (ESCRITORIO)-->
 <div class="container-fluid titulo">
-<h5 class="text-justify hidden-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2016.
+<h5 class="text-justify hidden-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2017.
 Esta página puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su dirección electrónica. De otra forma, requiere permiso previo por escrito de la institución.</h5>
 <!--DERECHOS RESERVADOS DE LA PAGINA (MOVILES)-->
-<h6 class="text-justify visible-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2016.
+<h6 class="text-justify visible-xs">Hecho en México, Universidad Nacional Autónoma de México (UNAM), todos los derechos reservados 2017.
 Esta página puede ser reproducida con fines no lucrativos, siempre y cuando no se mutile, se cite la fuente completa y su dirección electrónica. De otra forma, requiere permiso previo por escrito de la institución.</h6>
+
+<p align="center">
+  <a href="creditos.html"><button type="button" class="btn creditos btn-sm">Créditos de diseño</button>
+  </a>
+</p>
+
 </div>
 <!--TERMINA DIRECTORIO DE INGENIERIA CIVIL -->
 
