cabios finales de la pagina

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ arquitectónico?</p>
 <!--VIDEO DEL ARTICULO PRINCIPAL-->
 <div class="embed-responsive embed-responsive-16by9">
 <!--PARA AGREGAR OTRO VIDEO SOLO QUITAR xZ5rsia7owE-->
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xZ5rsia7owE?VQ=HD720 rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=0&amp;html5=1&amp;allowfullscreen=true&amp;wmode=transparent rel=0&amp;vq=hd720" frameborder="0" allowfullscreen id="video-background"></iframe>
+<iframe frameborder="0" class="embed-responsive-item" src="https://www.youtube.com/embed/xZ5rsia7owE?rel=0&amp;controls=0&amp;autoplay=0&amp;showinfo=0" allowfullscreen></iframe>
 </div>
 <!--INFORMACION DEL ARTICULO PRINCIPAL (VIDEO) -->
 <h5 class="text-justify "> 
@@ -274,7 +274,7 @@ El gran número de empresas interesadas, la complejidad en la evaluación del pr
 <div class=" text-center borde_derecha main col-xs-6 col-sm-6 col-md-6 col-lg-4 ">
 <br>
 <div class="thumbnail">
-<a href="http://www.aragon.unam.mx/aragon/proceso-de-titulacion.html" target="_blank"><img src="imagenes/titulacion.png" alt="">
+<a href="http://www.aragon.unam.mx/aragon/ici-opciones-de-titulacion.html" target="_blank"><img src="imagenes/titulacion.png" alt="">
 <div class="caption ">
 <div class="visible-xs visible-sm visible-md">
 <span class="label label-success bar"> Titulación </span>
